crates/astria-sequencer/src/app/snapshots/astria_sequencer__app__execution_state__tests__check_if_prepared_invalidates_mismatch.snap
---
source: crates/astria-sequencer/src/app/execution_state.rs
expression: state.data()
---
CheckedPreparedMismatch(
    CachedProposal {
        time: Time(
            2025-03-12 0:44:59.000000032,
        ),
        proposer_address: account::Id(0909090909090909090909090909090909090909),
        txs: [],
        proposed_last_commit: None,
        misbehavior: [],
        height: block::Height(1),
        next_validators_hash: Hash::None,
    },
)
