crates/astria-sequencer/src/app/snapshots/astria_sequencer__app__execution_state__tests__check_if_prepared_validates_successfully.snap
---
source: crates/astria-sequencer/src/app/execution_state.rs
assertion_line: 417
expression: state.data()
---
PreparedValid(
    CachedProposal {
        time: Time(
            2025-03-12 0:44:59.000000032,
        ),
        proposer_address: account::Id(0909090909090909090909090909090909090909),
        txs: [],
        proposed_last_commit: None,
        misbehavior: [],
        height: block::Height(1),
        next_validators_hash: Hash::None,
    },
)
