crates/astria-sequencer/src/app/snapshots/astria_sequencer__app__execution_state__tests__set_execute_block_with_non_settable_states_errors.snap
---
source: crates/astria-sequencer/src/app/execution_state.rs
expression: errors
---
[
    "executed block state attempted to be set before prepared proposal state validated",
    "executed block state shouldn't be set after invalid check",
    "executed block state attempted to be set again",
    "executed block state shouldn't be set after invalid check",
]
