crates/astria-sequencer/src/app/snapshots/astria_sequencer__app__execution_state__tests__set_prepared_succeeds.snap
---
source: crates/astria-sequencer/src/app/execution_state.rs
expression: state.data()
---
Prepared(
    [
        101,
        190,
        43,
        136,
        179,
        22,
        222,
        141,
        168,
        27,
        166,
        224,
        219,
        18,
        171,
        174,
        17,
        45,
        128,
        121,
        227,
        158,
        53,
        225,
        197,
        72,
        161,
        248,
        229,
        43,
        5,
        106,
    ],
)
